# ELR-LRT

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
cpp/include/: frequency_table.h  patcher.h
cpp/src/: bindings.cpp  frequency_table.cpp  patcher.cpp
tests/: data.txt  patch_train_on_data.py  train_small_model_only_patch.py
