[bdist_wheel]
# This flag is False because the package is for Python 3 only
universal = 0

[metadata]
# Additional metadata that supplements pyproject.toml
license_file = LICENSE

[options]
# Ensure the package is treated as a Python package
zip_safe = False
include_package_data = True

[options.package_data]
elr_lrt = *.pyd, *.so
